<resources>
    <string name="app_name">Tenten</string>
    <string name="action_settings">Settings</string>
    <string name="draw" />
    <string name="start_game">Start single player game  </string>
    <string name="start_multi_game">Start multiplayer game </string>
    <string name="your_score">You</string>
    <string name="_0">0</string>
    <string name="computer_score">COM</string>
    <string name="choose_one_to_discard">You have the maximum number of cards. Choose one to discard.</string>
    <string name="use_ability">Use Ability</string>
    <string name="king_of_spades_is_unleashed">King of Spades unleashed!</string>
    <string name="com_2">COM 2</string>
    <string name="com_1">COM 1</string>
    <string name="com_3">COM 3</string>
    <string name="facebook_app_id">516028528583322</string>
    <string name="how_to_play">How To Play</string>
    <string name="back">Back</string>
    <string name="continue_button">Continue</string>
</resources>
