<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cheong.tenten.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/tentenlogo"
        android:visibility="visible"
        android:layout_above="@+id/playButton"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playMultiButton"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start_game"
        android:onClick="playGame"/>

    <Button
        android:id="@+id/playMultiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_multi_game"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="createRoom"/>

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/playMultiButton"
        android:text="@string/how_to_play"
        android:onClick="howToPlay"
        android:layout_marginTop="15dp" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.cheong.tenten.LoginFragment"
        tools:layout="@layout/login_fragment"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/howToPlayButton"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
