<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/gamelayout4P"
    android:background="@drawable/woodbackground"
    tools:context="com.cheong.tenten.GameActivity4P">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="#000080"
        android:editable="false"
        android:id="@+id/round_4P"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/com_1"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com1Text"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/com_2"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com2Text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/com_3"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com3Text"
        android:layout_marginLeft="217dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com1Score"
        android:layout_below="@+id/com1Text"
        android:layout_marginLeft="70dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com2Score"
        android:layout_below="@+id/com2Text"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/com3Score"
        android:layout_below="@+id/com3Text"
        android:layout_marginLeft="242dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drawButton4P"
        android:src="@drawable/back"
        android:background="@null"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="100dp"
        />

    <ImageView
        android:id="@+id/drawnCardImage4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/drawButton4P"
        android:layout_marginTop="116dp"
        android:padding="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#000000"
        android:textStyle="italic|bold"
        android:textColor="#ADD8E6"
        android:textSize="20dp"
        android:textAlignment="center"
        android:id="@+id/showMessage4P"
        android:layout_marginTop="210dp" />

    <ImageView
        android:id="@+id/boxImage0_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/boxImage2_4P"
        android:layout_below="@+id/drawButton4P"
        android:layout_marginTop="60dp"
        android:padding="4dp" />

    <ImageView
        android:id="@+id/boxImage1_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/boxImage3_4P"
        android:layout_below="@+id/boxImage0_4P"
        android:padding="4dp" />

    <ImageView
        android:id="@+id/boxImage2_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawButton4P"
        android:layout_marginTop="60dp"
        android:padding="4dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/boxImage3_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage2_4P"
        android:padding="4dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/boxImage4_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/boxImage2_4P"
        android:layout_below="@+id/drawButton4P"
        android:layout_marginTop="60dp"
        android:padding="4dp" />

    <ImageView
        android:id="@+id/boxImage5_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/boxImage3_4P"
        android:layout_below="@+id/boxImage4_4P"
        android:padding="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/your_score"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/playerText4P"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:editable="false"
        android:id="@+id/playerScore4P"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/continue_button_4P"
        android:layout_above="@+id/useAbility4P"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_ability"
        android:id="@+id/useAbility4P"
        android:layout_below="@+id/boxImage3_4P"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blast"
        android:id="@+id/blastCom1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blast"
        android:id="@+id/blastCom2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blast"
        android:id="@+id/blastCom3"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        />

</RelativeLayout>
