<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/gamelayout"
    android:background="@drawable/woodbackground"
    tools:context="com.cheong.tenten.MultiGameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Player 2"
        android:textColor="#ffff00"
        android:editable="false"
        android:id="@+id/otherScoreStaticText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#ffff00"
        android:editable="false"
        android:id="@+id/otherScore"
        android:layout_below="@+id/otherScoreStaticText"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drawButton"
        android:src="@drawable/back"
        android:background="@null"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="100dp"
        />

    <ImageView
        android:id="@+id/drawnCardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/drawButton"
        android:layout_marginTop="116dp"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#000000"
        android:textStyle="italic|bold"
        android:textColor="#ADD8E6"
        android:textSize="20dp"
        android:textAlignment="center"
        android:id="@+id/showMessage"
        android:layout_marginTop="210dp" />

    <ImageView
        android:id="@+id/boxImage0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/boxImage2"
        android:layout_below="@+id/drawButton"
        android:layout_marginTop="60dp"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/boxImage3"
        android:layout_below="@+id/boxImage0"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawButton"
        android:layout_marginTop="60dp"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage2"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/boxImage2"
        android:layout_below="@+id/drawButton"
        android:layout_marginTop="60dp"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/boxImage3"
        android:layout_below="@+id/boxImage4"
        android:src="@drawable/empty"
        android:padding="4dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/your_score"
        android:textColor="#ffff00"
        android:editable="false"
        android:id="@+id/playerScoreStaticText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/_0"
        android:textColor="#ffff00"
        android:editable="false"
        android:id="@+id/playerScore"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_ability"
        android:id="@+id/useAbility"
        android:layout_below="@+id/boxImage3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blast"
        android:id="@+id/blastPosition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        />
</RelativeLayout>
