<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gamelayout4P"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cheong.tenten.MultiGameActivity4P">

    <TextView
        android:id="@+id/round_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:editable="false"
        android:textColor="#00e5ee"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/com1name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:editable="false"
        android:text="P2"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/com2name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:editable="false"
        android:text="P3"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/com3name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="50dp"
        android:editable="false"
        android:text="P4"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/otherScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/com1name"
        android:layout_marginLeft="70dp"
        android:editable="false"
        android:text="@string/_0"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/otherScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/com2name"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:text="@string/_0"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/otherScore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/com3name"
        android:layout_marginLeft="242dp"
        android:editable="false"
        android:text="@string/_0"
        android:textColor="#191919"
        android:textSize="25dp" />

    <ImageButton
        android:id="@+id/drawButton4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="120dp"
        android:background="@null"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/drawnCardImage4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_toRightOf="@+id/drawButton4P"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/showMessage"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="210dp"
        android:background="#000000"
        android:textAlignment="center"
        android:textColor="#ADD8E6"
        android:textSize="20dp"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/boxImage0_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawButton4P"
        android:layout_marginTop="60dp"
        android:layout_toLeftOf="@+id/boxImage2_4P"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage1_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage0_4P"
        android:layout_toLeftOf="@+id/boxImage3_4P"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage2_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawButton4P"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage3_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage2_4P"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage4_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawButton4P"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/boxImage2_4P"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/boxImage5_4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage4_4P"
        android:layout_toRightOf="@+id/boxImage3_4P"
        android:padding="4dp"
        android:src="@drawable/empty"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/playerText4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="18dp"
        android:editable="false"
        android:text="@string/your_score"
        android:textColor="#191919"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="22dp"
        android:editable="false"
        android:text="@string/_0"
        android:textColor="#191919"
        android:textSize="25dp" />

    <Button
        android:id="@+id/useAbility4P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxImage3_4P"
        android:layout_centerHorizontal="true"
        android:text="@string/use_ability" />

    <ImageView
        android:id="@+id/blastCom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/blast"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/blastCom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/blast"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/blastCom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/blast"
        android:visibility="invisible" />

</RelativeLayout>
